# agenticworkflow

./: .env.example  .gitignore  ARCHITECTURE.md  New Text Document.txt  README.md  SETUP.md  WORKFLOW.md  agent_diagram.html  docker-compose.yml  future.md  main.py  pyproject.toml  requirements.txt  state.py
.codesight/: CODESIGHT.md  config.md  libs.md  routes.md
.codesight/wiki/: chat.md  index.md  infra.md  libraries.md  log.md  overview.md  state.md
a2a/: __init__.py  agent_card.py  client.py
agents/: outage_agent.py  rag_agent.py  router_agent.py  weather_agent.py
baseagent/: __init__.py  agent_memory.py  agent_server.py  base_agent.py  events.py  llm_client.py  mcp_client.py
config/: default.yaml  local.yaml.example  test.yaml
docs/: ASYNC_A2A.md  Agentic_Framework_Flow_Plan_Patterns.pptx  PLAN_PLANNER_ORCHESTRATOR.md  STAKEHOLDER_SUMMARY.md  STATUS.md  a2a-bus-architecture.html  build_agentic_framework_ppt.py
frontend/: index.html  trace.html
gate/: __init__.py  completion_gate.py
graph/: graph_builder.py
mcp_server/: rag_index.py  weather_server.py
mcpconfig/: mcp_config.py
memory/: commit_store.py  facts_store.py  memory.py  mongo_store.py  postgres_store.py  redis_store.py  vector_store.py
observability/: __init__.py  logging.py  mlflow_setup.py  observable.py
orchestrator/: __init__.py  blackboard.py  executor.py  orchestrator.py  task_state.py
planner/: __init__.py  dag.py  parsing.py  planner_agent.py
registry/: __init__.py  agent_meta.py  contracts.py  registry.py  registry_client.py  service.py  store.py
router/: __init__.py  intent_classifier.py  router_agent.py
scripts/: bench_guard.py  capture_trace.py  hard-refresh.bat  quantize_guard_models.py  replay_dlq.py  run-all.ps1  run-dev.ps1  run-full.ps1  run-platform.ps1  run-prod.ps1  show_mongo.py
security/: __init__.py  guards.py  llm_guard.py  test_guard.py
services/mcp/: _repository.py  genie_mcp_server.py  rag_index.py  weather_server.py
services/rag/: server.py
services/registry/: server.py
services/supervisor/: __init__.py  server.py
src/: app.py
src/applications/demo/: providers.py
src/applications/demo/outage/: agent.py
src/applications/demo/rag/: agent.py
src/applications/demo/weather/: agent.py
src/genie/a2a/: __init__.py  agent_card.py  client.py  types.py
src/genie/agents/: __init__.py  base.py  memory.py  server.py  task_state.py  task_store.py
src/genie/application/: blackboard.py  checkpointer.py  graph.py  state.py
src/genie/application/nodes/: _planner_dag.py  _planner_parsing.py  _router_intent.py  completion_gate.py  executor.py  orchestrator.py  planner.py  router.py  synthesizer.py
src/genie/interface/: bootstrap.py  reply_router.py
src/genie/interface/routers/: chat.py  conversations.py  health.py  registry.py  runs.py  state.py
src/genie/llm/: client.py
src/genie/mcp/: client.py  config.py  permissions.py
src/genie/memory/: commit_store.py  facts_store.py  mongo_store.py  redis_store.py  vector_store.py
src/genie/messaging/: __init__.py  awaiting.py  broker.py  dedup.py  envelope.py  supervisor.py
src/genie/observability/: __init__.py  logging.py  mlflow_setup.py  observable.py
src/genie/platform/: config.py  db.py  events.py  milvus.py  mongo.py  postgres.py  redis.py  sqlserver.py
src/genie/rag/: __init__.py  factory.py  index.py
src/genie/rag/adapters/: local.py  remote.py
src/genie/registry/: __init__.py  agent_meta.py  contracts.py  registry_client.py  store.py
src/genie/security/: __init__.py  guards.py  llm_guard.py
synthesizer/: __init__.py  synthesizer.py
tests/integration/: test_agent_bus_consumer.py  test_agent_server.py  test_async_executor.py  test_kafka_e2e.py  test_rag_adapter.py  test_reply_router.py
tests/unit/: test_a2a_client.py  test_a2a_types.py  test_agent_card.py  test_db_connections.py  test_guard.py  test_mcp_result.py  test_mcp_server_tools.py  test_messaging_dedup.py  test_messaging_envelope.py  test_rag_contracts.py  test_rag_index.py  test_supervisor.py
