[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-platform"
version = "0.1.0"
description = "A multi-agent platform: router -> synthesizer workflow plus capabilities (MCP, registry/discovery, A2A, memory, security guards, observability). Applications build agents by inheriting genie.agents.base.BaseAgent."
requires-python = ">=3.13"
dependencies = [
    # --- Web / orchestration ---
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langgraph",
    "langchain-mcp-adapters",
    "langchain-openai",
    "langchain-core",
    "python-dotenv",
    # --- Config (central pydantic-settings + YAML sources) ---
    "pydantic-settings",
    "PyYAML",
    # --- Persistence ---
    "motor",
    # --- Remote agents (registry/discovery service + agent services) ---
    "httpx",
    # --- Optional stores (activate via env/config; no-op when unset) ---
    "redis>=4.2",
    "pymilvus[milvus_lite]>=2.4",
    # Optional relational backends (activate via postgres_dsn / sqlserver_dsn):
    # psycopg v3 gives sync + async + pooling for Postgres; pyodbc + aioodbc for
    # SQL Server (the latter needs the OS "ODBC Driver 18 for SQL Server").
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "pyodbc>=5.0",
    "aioodbc>=0.5",
    # --- Security (mandatory input/output content guard) ---
    "llm-guard>=0.3.15",
    # --- Router intent classifier (local, CPU) ---
    "sentence-transformers>=2.7",
    # --- Observability ---
    "mlflow>=2.16",
    "psycopg2-binary",
    # --- RAG service boundary (shared wire contracts; editable local package) ---
    "genie-rag-contracts",
    "a2a-sdk>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "import-linter",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genie", "src/applications"]

[tool.hatch.metadata]
# Allow the local path dependency on genie-rag-contracts (uv editable source below).
allow-direct-references = true

[tool.uv.sources]
genie-rag-contracts = { path = "packages/genie-rag-contracts", editable = true }
# llm-guard 0.3.16 caps requires-python at <3.13. We vendor its source under
# vendor/llm-guard/ with that cap raised to <3.14 (the only change) so the
# platform runs on Python 3.13. Self-contained — no external fork. Models are
# still fetched from HuggingFace at runtime, not vendored. Drop this override
# (and the vendor dir) once upstream lifts the cap.
llm-guard = { path = "vendor/llm-guard" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.importlinter]
root_packages = ["genie", "applications", "genie_rag_contracts"]

[[tool.importlinter.contracts]]
name = "Platform kernel must not depend on applications"
type = "forbidden"
source_modules = ["genie"]
forbidden_modules = ["applications"]

[[tool.importlinter.contracts]]
name = "RAG contracts package must stay leaf-pure"
type = "forbidden"
source_modules = ["genie_rag_contracts"]
forbidden_modules = ["genie", "applications"]
